# otus-cpp

./: CMakeLists.txt
.github/workflows/: release.yml
cmake/modules/: configuration.cmake
src/app/: CMakeLists.txt  main.cpp
src/lib/: CMakeLists.txt  lib.cpp
tests/: CMakeLists.txt
tests/with-boost/: CMakeLists.txt  test_version.cpp
tests/with-google/: CMakeLists.txt  gtest_test_version.cpp
